[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["brklntmhwk <contact@younagi.dev>"]
license = "MIT"
description = "A tool to search files"
readme = "README.md"
keywords = ["cli", "search", "demo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
